<resources>
    <string name="app_name">DownloadFileWithKtor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">Paste url here</string>
    <string name="paste">Paste</string>
    <string name="download">Download</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
</resources>